# pirate

./: .gitignore  CMakeLists.txt  Connection.cpp  Connection.h  ProtocolStruct.h  Server.cpp  Server.h  ShibbolethManager.cpp  ShibbolethManager.h  Sniffer.cpp  Sniffer.h  main.cpp
conf/: XSpeedLevel2.req
test/: client.cpp  client1.cpp
