cmake_minimum_required(VERSION 2.8)
SET(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake)
SET(CMAKE_INCLUDE_CURRENT_DIR ON)
SET(BUILD_SHARED_LIBS ON)

INCLUDE(CollectSrcs)

project(pirate)
set(TARGET pirate)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1y -Werror=uninitialized -Werror=return-type")
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -D_DEBUG")

SET(${TARGET}_SUBDIRS )

GET_SRCS(${TARGET}_SRCLISTS ${TARGET}_SUBDIRS)
ADD_EXECUTABLE(${TARGET} ${${TARGET}_SRCLISTS})
TARGET_LINK_LIBRARIES(${TARGET} tbbmalloc)
TARGET_LINK_LIBRARIES(${TARGET} pcap)
TARGET_LINK_LIBRARIES(${TARGET} pthread)
TARGET_LINK_LIBRARIES(${TARGET} boost_program_options)
TARGET_LINK_LIBRARIES(${TARGET} boost_filesystem)
TARGET_LINK_LIBRARIES(${TARGET} boost_system)


FILE(GLOB_RECURSE ${TARGET}_HEADER_LISTS "*.h" "*.hpp")
INSTALL_FILES(include ${TARGET}_HEADER_LISTS)
